force-app/main/default/objects/Position__c/fields/Position_Open_N__c.field-meta.xml
<CustomField>
    <fullName>Position_Open_N__c</fullName>
    <formula>Close_Date__c -  Open_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Open N</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>