force-app/main/default/objects/Position__c/fields/Programing__c.field-meta.xml
<CustomField>
    <fullName>Programing__c</fullName>
    <label>Programming Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Javascript</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>