force-app/main/default/objects/Position__c/recordTypes/Non_IT.recordType-meta.xml
<RecordType>
    <fullName>Non_IT</fullName>
    <active>true</active>
    <label>Non-IT</label>
</RecordType>