force-app/main/default/objects/Position__c/validationRules/close_date_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>close_date_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Close_Date__c )  &amp;&amp;   
ISPICKVAL( Status__c , &quot;Closed - Filled&quot;)</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>if the status is closed closed date is required</errorMessage>
</ValidationRule>