force-app/main/default/objects/Position__c/validationRules/Min_Pay_can_not_be_more_than_max_pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Pay_can_not_be_more_than_max_pay</fullName>
    <active>false</active>
    <errorConditionFormula>Min_Pay__c  &gt;=  Max_Pay__c</errorConditionFormula>
    <errorDisplayField>Min_Pay__c</errorDisplayField>
    <errorMessage>Min Pay can not be more than max pay</errorMessage>
</ValidationRule>