force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Max_Pay__c</columns>
    <columns>Min_Pay__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>