force-app/main/default/objects/Position__c/listViews/IT_jobs.listView-meta.xml
<ListView>
    <fullName>IT_jobs</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Functional_Area__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Position__c.IT</value>
    </filters>
    <label>IT jobs</label>
</ListView>