force-app/main/default/objects/Position__c/listViews/NON_IT_jobs.listView-meta.xml
<ListView>
    <fullName>NON_IT_jobs</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Location__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Position__c.Non_IT</value>
    </filters>
    <label>NON IT jobs</label>
</ListView>